--- a/bower.json
+++ b/bower.json
@@ -12,7 +12,8 @@
     "angular-animate": "~1.2.0",
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
-    "angular-spotify": "~1.0.0"
+    "angular-spotify": "~1.0.0",
+    "components-font-awesome": "components/font-awesome#~4.4.0"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
