--- a/bower.json
+++ b/bower.json
@@ -13,7 +13,8 @@
     "angular-touch": "~1.2.0",
     "angular-route": "~1.2.0",
     "angular-spotify": "~1.0.0",
-    "components-font-awesome": "components/font-awesome#~4.4.0"
+    "components-font-awesome": "components/font-awesome#~4.4.0",
+    "angular-bootstrap-colorpicker": "~3.0.18"
   },
   "devDependencies": {
     "angular-mocks": "~1.2.0",
